tests/valid/definite/SetUnion_Valid_3.whiley
void System::main([string] args):
     xs = {1,2,3,4}
     ys = {5} ∪ xs
     print str(xs)
     xs = xs ∪ {6}
     print str(xs)
     print str(ys)
